# video_translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.MD  LICENSE  README.md  init.sh  install.sh  ocr_subtitles.py  prepare_runtime_assets.py  pyproject.toml  requirements.txt  start-gpt-sovits.sh  video-translator  video-translator-local  video_translator.py
video_translator_assets/: __init__.py
