[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translator-cli"
dynamic = ["version"]
description = "Offline OCR-first video translation and GPT-SoVITS dubbing CLI built on ffmpeg, Whisper, HY-MT, and RapidOCR"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  {name = "wencharmwang"},
]
keywords = ["video", "translation", "subtitle", "ocr", "tts", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "audio-separator[cpu]==0.44.1",
  "demucs",
  "faster-whisper",
  "rapidocr-onnxruntime",
  "requests",
  "transformers==4.56.0",
]

[project.urls]
Homepage = "https://github.com/wencharmwang/video_translator"
Repository = "https://github.com/wencharmwang/video_translator"
Issues = "https://github.com/wencharmwang/video_translator/issues"

[project.scripts]
video-translator = "video_translator:main"
ocr-subtitles = "ocr_subtitles:main"

[tool.setuptools]
py-modules = ["video_translator", "ocr_subtitles"]
packages = ["video_translator_assets"]

[tool.setuptools.package-data]
video_translator_assets = ["female.mp3", "male.wav"]

[tool.setuptools.dynamic]
version = {attr = "video_translator.__version__"}
